<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/dinner_workmates_darken_blurred"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/settings_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_logo_go4lunch"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/app_name_login_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/settings_title"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/notifications_asked_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/activate_notifications_asked"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/notifications_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="-25dp"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:id="@+id/change_lang_asked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/change_the_app_language"
            android:textColor="@color/white"
            android:textSize="18sp"/>


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/change_lang_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="-25dp"
            android:layout_marginEnd="20dp"/>


    </LinearLayout>

</FrameLayout>